# egui_browser

./: Cargo.toml  README.md  run.bat
src/: app.rs  main.rs  style.rs  ui_components.rs
src/html_renderer/: element_renderers.rs  mod.rs  renderer.rs  style_handler.rs  text_processor.rs
src/html_renderer/renderers/: block.rs  forms.rs  lists.rs  media.rs  mod.rs  tables.rs  text.rs
