[package]
name = "egui_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.0"  # egui framework
egui = "0.24.0"    # UI library
ehttp = { version = "0.3.0", features = ["native-async"] }    # HTTP client
poll-promise = "0.3.0"  # For async operations
html_parser = "0.7.0"  # For parsing HTML
winapi = { version = "0.3.9", features = ["winuser", "windef"] }